added cki icons bottom right

--- a/css/index.css
+++ b/css/index.css
@@ -98,3 +98,16 @@ a:hover, button:hover{
     max-width: 30px;
     height: auto;
 }
+
+
+.footer img{
+    max-width: 5vw;
+    float: right;
+    margin-right: 0.2vw;
+    margin-left: 0.2vw;
+}
+
+#calnevha{
+    max-width: 5.1vw
+}
+
