reformatted navbar, changed landing page design, added stickers to file

--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,46 @@
 
 .footer{
     height: 50vh;
-    text-align: center;
     background-color: #7B899A;
     display: flex;
+    flex-direction: row;
 }
+
+
+
+.ckiLogos img{
+    height: 10vh;
+    align-self: flex-end;
+}
+
+.footer img{
+    width: 5vw;
+    margin-right: 0.2vw;
+    margin-left: 0.2vw;
+}
+
+.middleSection{
+    align-self: flex-start;
+    flex-direction: row;
+    height: 70vh;
+}
+
+.bottomSection{
+    align-self: flex-end;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.copyright{
+    align-self: flex-start;
+}
+
+.ckiLogos{
+    align-self: flex-end;
+}
+
+.inline{
+    display: inline;
+}
+
