--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -5,9 +5,6 @@
     background: none;
     margin-left: auto;
     margin-right: auto;
-
-
-
 }
 
 
@@ -17,6 +14,9 @@
     font-family: "Nunito";
 }
 
+.homePageMainPanel{
+    background: linear-gradient(180deg, rgba(242, 189, 29, 0.7) 0%, rgba(255, 122, 1, 0.7) 100%) !important;
+}
 
 .topFormat{
     text-align: left;
@@ -37,15 +37,11 @@
     padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #F09729;
+    background-color: #ED961E;
+    filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.25));
     border: none;
     border-radius: 55px;
     animation-duration: 0.7s;
-}
-
-
-a{
-
 }
 
 
@@ -58,21 +54,9 @@ a:hover, button:hover{
     opacity: 60%;
 }
 
-
-
-
-
-.footer img{
-    width: 5vw;
-    margin-right: 0.2vw;
-    margin-left: 0.2vw;
-}
-
 #calnevha{
     max-width: 5.1vw
 }
-
-
 
 .middleSection{
     justify-content: space-evenly;
@@ -113,6 +97,7 @@ a:hover, button:hover{
 .socialMediaFooter{
 
 }
+
 
 
 .copyright{
