--- a/css/aboutPage.css
+++ b/css/aboutPage.css
@@ -1,16 +1,22 @@
 
 
-.about{
-    width: 70vw;
+
+
+
+
+.mainDesc{
+    width: 60vw;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 7em;
 }
+
 
 .committeeSection{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10em;
+
+    margin-top: 13vh;
+    margin-bottom: 15vh;
     justify-content: center;
     width: 70vw;
 
@@ -49,12 +55,12 @@
 
 .teamTitle{
     text-align: center;
-    font-size: 2.5em;
+    font-size: 30px;
 }
 
 .shokugeki{
     text-align: center;
-    font-size: 1.5em;
+    font-size: 20px;
     margin-bottom: 2em;
 }
 
