--- a/css/footer.css
+++ b/css/footer.css
@@ -6,13 +6,13 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 80px 20px;
+    padding: 40px 20px;
 
 
 }
 
 footer{
-    background-color: #7B899A;
+    background-color: #D4D8D0;
 }
 
 
@@ -24,6 +24,8 @@ footer{
     flex: 2 1;
 
 }
+
+
 
 .smaller{
     width: 60%;
@@ -46,8 +48,7 @@ footer{
 
 .footer img{
     width: 5vw;
-    margin-right: 0.2vw;
-    margin-left: 0.2vw;
+
 }
 
 .middleSection{
@@ -80,7 +81,15 @@ footer{
 }
 
 .socialMediaFooter{
-    width: 5vw;
+    height: 5vw;
+
+}
+
+#instagram{
+    width: 3vw;
+}
+
+footer a{
     margin-right: 0.2vw;
     margin-left: 0.2vw;
 }
