--- a/css/eventsPage.css
+++ b/css/eventsPage.css
@@ -1,19 +1,50 @@
 
 
-.stickerDrop{
+
+
+
+.eventImg{
+    width: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+.event{
     margin-left: 2.5%;
     margin-right: 2.5%;
+
+}
+
+.eventTitle{
+    display: inline-block;
+}
+
+
+
+.eventImg:hover{
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
+    animation-timing-function: ease-in-ease-out;
+}
+
+.stickerDrop{
+    margin-left: 30px;
+    margin-right: 30px;
     margin-top: 60px;
     margin-bottom: 60px;
 }
 
 .stickerDrop .sticker{
-    height: 20%;
-    width: 20%;
+    height: 250px;
+    width: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
-.stickerFundraiserDesc{
+.eventDesc{
     width: 60vw;
     margin-left: auto;
     margin-right: auto;
@@ -33,4 +64,8 @@
     margin-left: 2.5%;
     margin-right: 2.5%;
 
+}
+
+.break{
+    height: 100px;
 }
